--- a/profil.html
+++ b/profil.html
@@ -1,15 +1,41 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>
-        hi von Profil
+        Profil
     </h1>
 
-    <p>Das ist mein Profil: Ich bins</p>
-    
+    <div >
+        <li>Name, Vorname:
+            <ul>Blüm, Paula</ul>
+        </li>
+        <li> Geb. Datum:
+            <ul>28.08.2008</ul>
+        </li>
+        <li>
+            Anschrift.
+            <ul>Lydia-Bootz-Ring 25</ul>
+            <ul>67593 Westhofen</ul>
+        </li>
+        <li>Telefon:
+           <ul> 06244/919458</ul>
+            <ul>Mobil:
+            +49 176 34378866</ul>
+        </li>
+        <li> E-Mail Adresse: 
+            <ul>p.bluem2808@gmail.com</ul>
+        </li>
+
+
+
+    </div>
+
 </body>
+
 </html>
