added burger menu and other stuff

--- a/profil.html
+++ b/profil.html
@@ -3,38 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="profil.css">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <h1>
+<body class="seite">
+
+    <h1 class="heading">
+        <!-- <div class="position-relative mx-2">
+            <a class="img-link" href="/index.html"> <img
+                    src="https://static.vecteezy.com/system/resources/previews/015/271/944/original/house-or-home-icon-in-linear-style-home-icon-illustration-sign-home-simple-icon-small-house-icon-simple-flat-house-symbol-home-illustration-vector.jpg"
+                    class="rounded float-end" alt="home"></a>
+        </div> -->
         Profil
+        <div class="position-absolute top-0 start-0" class="dings">
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <input type="checkbox" id="menuCheckbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menu">
+                        <li>
+                            <a href="/lebenslauf.html">
+                                <label for="menuCheckbox" onclick="this.parentNode.click();">Lebenslauf</label>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="/sonstiges.html">
+                                <label for="menuCheckbox" onclick="this.parentNode.click();">Sonstiges</label>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/index.html">
+                                <label for="menuCheckbox" onclick="this.parentNode.click();">Home</label>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        </nav>
+        </div>
     </h1>
-
-    <div >
-        <li>Name, Vorname:
-            <ul>Blüm, Paula</ul>
-        </li>
-        <li> Geb. Datum:
-            <ul>28.08.2008</ul>
-        </li>
-        <li>
-            Anschrift.
-            <ul>Lydia-Bootz-Ring 25</ul>
-            <ul>67593 Westhofen</ul>
-        </li>
-        <li>Telefon:
-           <ul> 06244/919458</ul>
-            <ul>Mobil:
-            +49 176 34378866</ul>
-        </li>
-        <li> E-Mail Adresse: 
-            <ul>p.bluem2808@gmail.com</ul>
-        </li>
-
 
 
     </div>
+    </div>
+    <div class="container text-center">
+        <div class="row my-5">
+            <div class="col">
+                <p class="schrift">
+                    Das bin ich:
+                </p>
+            </div>
+            <div class="col-lg">
+                <div class="steckbrief">
+                    <li>Name, Vorname:
+                        <ul>Blüm, Paula</ul>
+                    </li>
+                    <li> Geb. Datum:
+                        <ul>28.08.2008</ul>
+                    </li>
+                    <li>Anschrift:
+                        <ul>Lydia-Bootz-Ring 25</ul>
+                        <ul>67593 Westhofen</ul>
+                    </li>
+                    <li>Telefon:
+                        <ul> 06244/919458</ul>
+                        <ul>Mobil:
+                            +49 176 34378866</ul>
+                    </li>
+                    <li> E-Mail Adresse:
+                        <ul>p.bluem2808@gmail.com</ul>
+                    </li>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="balken">
+        <span class="placeholder col-12 placeholder-xs"></span>
+    </div>
+    <div class="herz">&#10084;</div>
 
 </body>
 
