added burger menu and other stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body class="seite">
     <span class="placeholder col-12 placeholder-xs"></span>
     <!-- <nav class="navbar bg-body-tertiary"> -->
     <div class="container text-center">
@@ -25,13 +25,17 @@
             </div>
             <div class="col">
                 <button type="button" class="button-navbar1">
+                    <a class="button-link" href="./lebenslauf.html">
                     <p class="button-schrift">Lebenslauf</p>
+                    </a>
                 </button>
 
             </div>
             <div class="col">
                 <button type="button" class="button-navbar2">
-                    <p class="button-schrift">Sonstiges</p>
+                    <a class="button-link" href="./sonstiges.html">
+                     <p class="button-schrift">Sonstiges</p>
+                    </a>
                 </button>
             </div>
         </div>
@@ -52,7 +56,7 @@
                 <h2> About Me</h2>
             </li>
             <li class="text-page" style="font-family: monospace ">
-                <p class="button-schrift">PAGE</p>
+                <p class="button-schrift1">PAGE</p>
             </li>
         </ul>
 
