--- a/index.html
+++ b/index.html
@@ -13,59 +13,77 @@
 <body class="seite">
     <span class="placeholder col-12 placeholder-xs"></span>
     <!-- <nav class="navbar bg-body-tertiary"> -->
-    <div class="container text-center">
-        <div class="row my-5">
-            <div class="col">
-                <button type="button" class="button-navbar">
-                    <a class="button-link" href="./profil.html">
-                        <p class="button-schrift">Profil</p>
-                    </a>
-                </button>
+    <table>
+        <tr>
+            <td class="o">
+                <!-- <div class="container text-center"> -->
+                <div class="row my-5">
+                    <div class="col">
+                        <button type="button" class="button-navbar">
+                            <a class="button-link" href="./profil.html">
+                                <p class="button-schrift">Profil</p>
+                            </a>
+                        </button>
 
-            </div>
-            <div class="col">
-                <button type="button" class="button-navbar1">
-                    <a class="button-link" href="./lebenslauf.html">
-                    <p class="button-schrift">Lebenslauf</p>
-                    </a>
-                </button>
+                    </div>
+            </td>
+            <td class="o">
+                <div class="col">
+                    <button type="button" class="button-navbar1">
+                        <a class="button-link" href="./lebenslauf.html">
+                            <p class="button-schrift">Lebenslauf</p>
+                        </a>
+                    </button>
 
-            </div>
-            <div class="col">
-                <button type="button" class="button-navbar2">
-                    <a class="button-link" href="./sonstiges.html">
-                     <p class="button-schrift">Sonstiges</p>
-                    </a>
-                </button>
-            </div>
-        </div>
-        <!-- </nav> -->
-    </div>
-    <!-- <div class="container-sm">
-       hi
-    </div> -->
-
-    </div>
-
-    <div class="schachmuster"></div>
-    <div class="box"></div>
-    <div class="box2"></div>
-    <div class="box3">
-        <ul class="liste1">
-            <li class="text-about-me">
-                <h2> About Me</h2>
-            </li>
-            <li class="text-page" style="font-family: monospace ">
-                <p class="button-schrift1">PAGE</p>
-            </li>
-        </ul>
+                </div>
+            </td>
+            <td class="o">
+                <div class="col">
+                    <button type="button" class="button-navbar2">
+                        <a class="button-link" href="./sonstiges.html">
+                            <p class="button-schrift">Sonstiges</p>
+                        </a>
+                    </button>
+                </div>
+                </div>
+                <!-- </nav> -->
+                </div>
+            </td>
+        </tr>
+    </table>
+        
+            <div class="schachmuster"></div>
+        <img src="/assets/Group 30.png" class="bild1">
+            <!-- <div class="box"></div> -->
 
 
+        <table>
+        <tr>
+            <td>
+                <div class="box2"></div>
+            </td>
+            <td>
+                <div class="box3">
 
-        <!-- <center>About me</center> -->
-    </div>
-    <div class="box4"></div>
-    <div class="box5"></div>
+                    <ul class="liste1">
+                        <li class="text-about-me">
+                            <h2> About Me</h2>
+                        </li>
+                        <li class="text-page" style="font-family: monospace ">
+                            <p class="button-schrift1">PAGE</p>
+                        </li>
+                    </ul>
+                </div>
+
+            </td>
+            <td>
+                <div class="box4"></div>
+            </td>
+        </tr>
+    </table>
+    <img src="/assets/Group 30.png" class="bild1">
+    <!-- <div class="box5"></div> -->
+    
     <div class="schachmuster2">
         <h4>Paula Blüm</h4>
     </div>
