--- a/profil.html
+++ b/profil.html
@@ -59,6 +59,7 @@
                 <p class="schrift">
                     Das bin ich:
                 </p>
+                <div class="box1"></div>
             </div>
             <div class="col-lg">
                 <div class="steckbrief">
