--- a/profil.html
+++ b/profil.html
@@ -27,6 +27,11 @@
                     <span></span>
                     <ul id="menu">
                         <li>
+                            <a href="/index.html">
+                                <label for="menuCheckbox" onclick="this.parentNode.click();">Home</label>
+                            </a>
+                        </li>
+                        <li>
                             <a href="/lebenslauf.html">
                                 <label for="menuCheckbox" onclick="this.parentNode.click();">Lebenslauf</label>
                             </a>
@@ -35,11 +40,6 @@
                         <li>
                             <a href="/sonstiges.html">
                                 <label for="menuCheckbox" onclick="this.parentNode.click();">Sonstiges</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/index.html">
-                                <label for="menuCheckbox" onclick="this.parentNode.click();">Home</label>
                             </a>
                         </li>
                     </ul>
@@ -61,7 +61,7 @@
                 </p>
                 <div class="box1"></div>
             </div>
-            <div class="col-lg">
+            <div class="col-md">
                 <div class="steckbrief">
                     <li>Name, Vorname:
                         <ul>Blüm, Paula</ul>
